skills api updated